# goit-python-hw-24-test

./: .env.example  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: conf.py  index.rst
migrations/versions/: 550635e58249_jwt.py  652b40e3eb1e_init.py  ae7d0efa180d_email.py
postgres-data/: postmaster.pid
postgres-data/base/1/: 2619  pg_internal.init
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  pg_control  pg_internal.init
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: conftest.py  test.db  test_route_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
